<ScrollView   
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:background="@color/gris"
    android:paddingBottom="40dp"
    android:orientation="vertical"    
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/tipo_luna"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="top"
        android:src="@drawable/anno_lunar" />
    
    <Button
        android:id="@+id/menu1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verLuna"
        android:text="@string/menu1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verLos20sellos"
        android:text="@string/menu5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verLos7plasmasRadiales"
        android:text="@string/menu7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verLos13Tonos"       
        android:text="@string/menu6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verOndaEncantada"        
        android:text="@string/menu2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verEncuentraTuKin"
        
        android:text="@string/menu4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verTzolkin"
        
        android:text="@string/menu8" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="verCalculadoraMaya"
       
        android:text="@string/menu9" />

    

</LinearLayout>
</ScrollView>
