<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalendarioActivity" >
   
    <GridView android:id="@+id/GridOpciones"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:layout_marginTop="170dp"
android:numColumns="7"
android:columnWidth="12dp"
android:horizontalSpacing="1dp"
android:verticalSpacing="1dp"
 />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="100dp"
         >

        <ImageView
            android:id="@+id/tipo_luna"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/GridOpciones"
            android:layout_alignTop="@+id/tableRow1"
            android:src="@drawable/dali1_sabado" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/tableRow1"
            android:layout_toRightOf="@+id/tipo_luna"
            android:src="@drawable/seli2_domingo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gama3_lunes" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/kali4_martes" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/alfa5_miercoles" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/limi6_jueves" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/silio7_viernes" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:padding="5dp"
         >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            
            android:text="Sab" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Dom" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Lun" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Mar" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Mie" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Jue" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Vie" />

    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/luna_hoy3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/totem3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"                
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Proposito"                
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </TableRow>

    </TableLayout>
    
</RelativeLayout>
